src/test/deca/context/valid/logic/inf.deca
// Description:
//    Programme valide ayant pour but de tester la comparaison inf.
//
// Resultats:
//    c=false;

{
    int a = 2;
    boolean c = (2<1);
}