src/test/deca/context/invalid/def_affect/decl-same.deca
// Description:
//    Programme invalide ayant pour but de tester la double declaration.
//
// Resultats:
//    erreur ligne 9

{
    int a = 1;
    int a = 2;
}